--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>BasedWhales</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,7 +10,7 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/x-icon/apple-touch-icon.png"
+      href="images/x-icon/logowhalev1.png"
     />
     <link
       rel="icon"
@@ -39,21 +39,14 @@
         </div>
         <div class="menu">
           <a
-            href="https://discord.gg/A9CnsVzzkZ"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img src="images/header/discord.webp" alt="Discord" />
-          </a>
-          <a
-            href="https://twitter.com/codeSTACKr"
+            href="https://twitter.com/BasedWhales"
             target="_blank"
             rel="noopener noreferrer"
           >
             <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-            href="https://opensea.io/collection/codecats"
+            href="https://opensea.io/collection/basedwhales"
             target="_blank"
             rel="noopener noreferrer"
           >
