--- a/frontend/index.html
+++ b/frontend/index.html
@@ -101,7 +101,7 @@
         </p>
         <a
           id="actionButton"
-          href="https://discord.gg/A9CnsVzzkZ"
+          href="https://twitter.com/BasedWhales"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
